
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-3 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Added prefix filtering to modLexicon::fetch
- Added modTemplateVar::getDisplayParams for easier fetching of display_params for a TV
- Fixed bug with custom TV render paths
- Added phpThumb to core, added connector for secure access, integrated into MODx.Browser
- Ensure categories in TV panel are sorted alphanumerically
- Added stripString, cdata, replace, fuzzydate and ago output filters
- [#MODX-2045] Added ExtJS, Smarty, PHPMailer, MagpieRSS version into System info
- [#MODX-2057] Fixed bugs with action/menu trees
- Fixed bug with is_writable check in setup; was checking core/config rather than just core/config/config.inc.php
- [#MODX-2042] Fixed extra beginning slash for image/file TVs
- Add validation to processors for Chunks, Plugins, Snippets, and Template Variables
- [#MODX-1998] Disallow reserved Template Variable names (i.e. Resource field names)
- [#MODX-2033] Fix bug with unchecking Template Variable access when editing a Template
- Have modX::switchContext() update placeholders from config on successful switch
- [#MODX-1774] Remove redundant setting of placeholders from modX::$config in modRequest::handleRequest()
- [#MODX-2031] Fix modX::stripTags() and modX::sanitize() to properly strip nested element tags
- [#MODX-2027] Added icon to file tree to show MODx Browser, for a different view on file management
- [#MODX-1924] Made more precise the cursor pointer change on buttons in mgr
- [#MODX-1904] Fixed bug with phx placeholders in modTranslate095 class
- [#MODX-1535] Fixed bug with transparent background for grid-based comboboxes
- [#MODX-1904] Fixed bug with phx placeholders in modParser095 class