@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-3 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Fixed permissions checks on resource tree context menu when policies are limited
 - Added prefix filtering to modLexicon::fetch
 - Added modTemplateVar::getDisplayParams for easier fetching of display_params for a TV
 - Fixed bug with custom TV render paths
